--- a/css/general.css
+++ b/css/general.css
@@ -51,18 +51,61 @@ body {
 }
 
 .admins {
-    width: 5vh;
-    height: 5vh;
-    border: 3px solid white;
-    border-radius: 100%;
+    width: 100%;
+    height: 7vh;
+    /* border: 3px solid white; */
+    /* border-radius: 100%; */
     position: absolute;
-    right: 3vh;
-    top: 1vh;
+    left: 0;
+    top: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 2.5vh;
     cursor: pointer;
+    /* background-color: white; */
+    opacity: 1;
+    transition: 300ms ease;
+    z-index: 1000;
+    background-color: #00272e;
+
+}
+
+.admin-panel {
+    width: 11vh;
+    min-height: 7vh;
+    position: absolute;
+    right: 2vh;
+    background-color: #00272e;
+    transition: 300ms ease;
+}
+
+.menu-acaunt {
+    width: 100%;
+    margin-top: 7vh;
+}
+
+.menu-panel {}
+
+.but-menu {
+    width: 100%;
+    height: 3vh;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    padding: 1vh;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    background-color: #00272e;
+    transition: 300ms ease;
+}
+
+.but-menu:hover {
+    background-color: #00272ecb;
+
 }
 
 .navbar {
@@ -76,10 +119,9 @@ body {
     z-index: 10000;
 }
 
-
 .login-container {
     max-width: 400px;
-    margin: 280px auto;
+    margin: 150px auto;
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -132,16 +174,26 @@ body {
     background-color: #005f6a;
 }
 
-.error-message {
-    color: red;
+.error-message,
+.success-message {
     margin-bottom: 10px;
     text-align: center;
 }
 
+.error-message {
+    color: red;
+}
+
 .success-message {
     color: green;
-    margin-bottom: 10px;
+}
+
+#toggleAuth {
+    cursor: pointer;
+    color: #007b8a;
     text-align: center;
+    display: block;
+    margin-top: 10px;
 }
 
 /* register */
